--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Initiate Challenges...
 
 on:
   schedule:
-    - cron: '5 * * * 5'
+    - cron: '5 * * * *'
 
 jobs:
   convert:
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Action to create issues stating ideas for new projects!
-        uses: ArnavK-09/create-this-project@v0.0.1-testing
+        uses: ArnavK-09/create-this-project@v0.0.2-testing
         with:
           gemini_api_key: ${{ secrets.GEMINI_API_KEY }}
           token: ${{ secrets.GITHUB_TOKEN }}
