--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,11 +11,8 @@ jobs:
     permissions: 
       issues: write
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
       - name: Action to create issues stating ideas for new projects!
-        uses: ArnavK-09/create-this-project@v0.0.7-testing
+        uses: ArnavK-09/create-this-project@action
         with:
           gemini_api_key: ${{ secrets.GEMINI_API_KEY }}
           token: ${{ secrets.GITHUB_TOKEN }}
