--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Action to create issues stating ideas for new projects!",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "fmt": "npx prettier -w .",
+    "build": "ncc build"
   },
   "keywords": [
     "github",
