--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
       issues: write
     steps:
       - name: Action to create issues stating ideas for new projects!
-        uses: ArnavK-09/create-this-project@action
+        uses: ArnavK-09/create-this-project@v0.0.25
         with:
           gemini_api_key: ${{ secrets.GEMINI_API_KEY }}
           token: ${{ secrets.GITHUB_TOKEN }}
